# kansas-comet

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.project  kansas-comet.cabal  komet.cabal
.github/workflows/: haskell-ci.yml
Web/: KansasComet.hs
Web/Scotty/: Comet.hs
example/: LICENSE  Main.hs  Makefile  README.md  TicTacToe.hs  index.html  kansas-comet-example.cabal  tictactoe.html
static/: kansas-comet.js
static/js/: kansas-comet.js
