Name:                kansas-comet
Version:             0.3.0
Synopsis:            A JavaScript push mechanism based on the comet idiom
Homepage:            https://github.com/ku-fpg/kansas-comet/
Bug-reports:         https://github.com/ku-fpg/kansas-comet/
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>, Andrew Farmer <anfarmer@ku.edu>
Maintainer:          Andrew Gill <andygill@ku.edu>
Copyright:           (c) 2013 The University of Kansas
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  A transport-level remote JavaScript RESTful push mechanism.

data-files:
    static/js/kansas-comet.js

Library
  Exposed-modules:     Web.Scotty.Comet
  other-modules:       Paths_kansas_comet
  default-language:    Haskell2010
  build-depends:       base             >= 4.6          && <= 4.8,
                       unordered-containers >= 0.2.3    && <= 0.2.4.0,
                       aeson            == 0.7.*,
                       containers       == 0.5.*,
                       data-default     == 0.5.*,
                       scotty           == 0.8.*,
                       stm              >= 2.2          && <= 2.4.3,
                       transformers     == 0.3.*,
                       text             == 1.1.*,
                       time             == 1.4.*

  GHC-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/ku-fpg/kansas-comet.git
