Name:                kansas-comet-example
Version:             0.4
Synopsis:            Example of Kansas Comet
License:             BSD3
Copyright:           (c) 2013 The University of Kansas
Build-type:          Simple
Cabal-version:       >= 1.10
extra-source-files:  README.md

data-files:
-- js
    js/jquery-json.js
    js/jquery-ui.js
    js/jquery.js
    js/kansas-comet.js

-- css
    css/ui-lightness/*.css
    css/ui-lightness/images/*.png

-- And the individual tests' index files.
    index.html

Executable kansas-comet-example
    Other-Modules:       Paths_kansas_comet_example
    Build-Depends:     base                 >= 4.6      && < 4.10,
                       aeson                >= 0.9      && < 0.12,
                       data-default-class   >= 0.0.1    && < 0.2,
                       scotty               >= 0.10     && < 0.12,
                       semigroups           == 0.18.*,
                       stm                  >= 2.2      && < 2.5,
                       text                 >= 0.11.3.1 && < 1.6,
                       wai-middleware-static == 0.8.0,
                       kansas-comet         == 0.4

    Main-is: Main.hs
    Hs-Source-Dirs: .
    Ghc-Options: -threaded -Wall
    default-language:    Haskell2010


