Name:                kansas-comet-example
Version:             0.4
Homepage:            https://github.com/ku-fpg/kansas-comet/
Bug-reports:         https://github.com/ku-fpg/kansas-comet/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>, Andrew Farmer <anfarmer@ku.edu>
Maintainer:          Andrew Gill <andygill@ku.edu>
Copyright:           (c) 2014 The University of Kansas
Category:            Web
Stability:           beta
Synopsis:            Example of Kansas Comet
Description:         Example of Kansas Comet.
Build-type:          Simple
Cabal-version:       >= 1.10
extra-source-files:  README.md
tested-with:         GHC == 7.6.3
                   , GHC == 7.8.4
                   , GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3

data-files:
-- js
    js/jquery-json.js
    js/jquery-ui.js
    js/jquery.js
    js/kansas-comet.js

-- css
    css/ui-lightness/*.css
    css/ui-lightness/images/*.png

-- And the individual tests' index files.
    index.html

Executable kansas-comet-example
    Other-Modules:       Paths_kansas_comet_example
    Build-Depends:     base                  >= 4.6      && < 4.12,
                       aeson                 >= 0.9      && < 1.4,
                       data-default-class    >= 0.0.1    && < 0.2,
                       scotty                >= 0.10     && < 0.12,
                       semigroups            == 0.18.*,
                       stm                   >= 2.2      && < 2.5,
                       text                  >= 0.11.3.1 && < 1.6,
                       wai-middleware-static >= 0.8      && < 0.9,
                       kansas-comet          == 0.4

    Main-is: Main.hs
    Hs-Source-Dirs: .
    Ghc-Options: -threaded -Wall
    default-language:    Haskell2010


